1999-07-08  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * misc.d (MACHINE-VERSION) [WIN32]: Use the info.wProcessorLevel field
          only on WinNT.

1999-07-06  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Don't access objects in memory through `oint*' pointers.
        * spvw_mark.d (mark, unmark, marked): Use as_object/as_oint
          conversions instead of oint* memory access.
        * spvw_update.d (update_STACKs): Use as_oint conversion instead of
          oint* memory access.
        * spvw_garcol.d (gc_mark): Change type of `dies_' to `object*'.
          (gc_mark_stack, alive): Use as_oint conversion instead of oint*
          memory access.
          (gc_morris3, update, update_stackobj): Use as_object/as_oint
          conversions instead of oint* memory access.
        * spvw_memfile.d (update, loadmem_update): Likewise.
        * eval.d (nest_var, funcall_iclosure): Likewise.
        * control.d (make_variable_frame, LET, LET*, SYMBOL-MACROLET,
           MULTIPLE-VALUE-BIND): Likewise.

1999-07-04  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * utils/gcc-cccp/cccp.c (output_line_command): In the filename
          being output, convert backslashes to double backslashes.

1999-07-04  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Make sure the default-file-encoding is set to ISO-8859-1 during
        building, even if the user has set a different LC_CTYPE variable.
        * spvw.d (usage): Add -E option.
          (argv_encoding_file, argv_encoding_pathname, argv_encoding_terminal,
           argv_encoding_foreign, argv_encoding_misc): New variables.
          (main): Add -E option.
        * _clisp.c (main): Handle -E option.
        * makemake.in (interpreted.mem, *.fas, lispinit.mem, lispinit2.mem,
           testsuite, $(MODULES)): Together with option "-norc", pass
          "-Efile ISO-8859-1".
        * encoding.d (encoding_from_name): New function, extracted from